cluster/apps/external/bitwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  namespace: external
spec:
  type: ExternalName
  externalName: 10.10.10.68
  ports:
    - port: 443
