cluster/apps/external/bitwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: https://avatars.githubusercontent.com/u/9778794
  name: bitwarden
  namespace: external
spec:
  rules:
  - host: vault1.witlinserver.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bitwarden
            port:
              number: 80
  tls:
  - hosts:
    - vault1.witlinserver.com
    secretName: bitwarden-cert
